Mute MediaPlayerRenderer when its WebContents is muted

This CL makes MediaPlayerRenderer a WebContentsObserver so it can mute
itself when its WebContents is muted.

Bug: 765337
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_site_isolation
Change-Id: I568d3c3f92d56aa7b201985c3810b450dfe36ba9